--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:padding="8dp"/>
+        android:padding="8dp"
+        style="@style/Widget.AppCompat.DropDownItem.Spinner"
+
+   />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view"
