--- a/app/src/main/res/layout/element.xml
+++ b/app/src/main/res/layout/element.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+
+       >
 
         <View
             android:id="@+id/view"
@@ -21,7 +22,7 @@
             android:layout_below="@+id/view"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/alapala_name"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -30,6 +31,7 @@
             android:layout_height="100dp"
             android:layout_below="@+id/text_view"
             android:layout_centerHorizontal="true"
+            android:layout_marginVertical="5dp"
             android:src="@drawable/ic_launcher_background"
             />
 
