--- a/app/src/main/res/layout/element.xml
+++ b/app/src/main/res/layout/element.xml
@@ -23,7 +23,8 @@
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/alapala_name"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/circle_image"
@@ -31,7 +32,7 @@
             android:layout_height="100dp"
             android:layout_below="@+id/text_view"
             android:layout_centerHorizontal="true"
-            android:layout_marginVertical="5dp"
+            android:layout_marginVertical="8dp"
             android:src="@drawable/ic_launcher_background"
             />
 
@@ -43,7 +44,8 @@
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/leader"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginBottom="8dp"/>
 
         <TextView
             android:id="@+id/text_view3"
@@ -53,7 +55,8 @@
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/vote"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
 
 
     </RelativeLayout>
